# ros2_minimal_packages

./: README.md
.github/workflows/: ros_ci.yml
lifecycle_node/: README.md  package.xml  setup.py
lifecycle_node/lifecycle_node/: lifecycle_node.py
minimal_gazebo/: README.md  package.xml  setup.cfg  setup.py
minimal_gazebo/config/: gazebo.config  minimal_wheeled_robot_controllers.yaml
minimal_gazebo/launch/: minimal_gazebo.launch.py
minimal_gazebo/worlds/: empty.sdf
minimal_lifecycle_node/: README.md  package.xml  setup.cfg  setup.py
minimal_lifecycle_node/minimal_lifecycle_node/: minimal_lifecycle_node.py
minimal_robot_description/: README.md  package.xml  setup.cfg  setup.py
minimal_robot_description/config/: minimal_manipulator.rviz  minimal_wheeled_robot.rviz
minimal_robot_description/launch/: minimal_manipulator.launch.py  minimal_wheeled_robot.launch.py
minimal_robot_description/urdf/: minimal_manipulator.xacro  minimal_wheeled_robot.gazebo.xacro  minimal_wheeled_robot.xacro
ros2_minimal_packages/: CMakeLists.txt  README.md  package.xml
